--- a/src/modules/HomePage/style.css
+++ b/src/modules/HomePage/style.css
@@ -29,10 +29,9 @@
 
 .homepage-container-header{
     position: absolute;
-    font-family: 'Lato_regular';
+    font-family: 'Lato';
     font-size: 18px;  
     color:white;
-    
 }
 
 .homepage-container-header-title{
