--- a/src/modules/HomePage/components/Rubric/style.css
+++ b/src/modules/HomePage/components/Rubric/style.css
@@ -17,7 +17,10 @@
 }
 
 .rubric-header-welcomeText{
+    font-family: 'Montserrat';
+    font-size: 18px;
     white-space:pre-line;
+
 }
 
 .rubric-sections{
