Добавил функционала к разделу категории

--- a/src/modules/HomePage/components/Categories/style.css
+++ b/src/modules/HomePage/components/Categories/style.css
@@ -72,4 +72,14 @@
     color:white;
     background: none;
     border:none;
+    cursor:pointer;
+    
+}
+
+.categories-container-menu-button:hover{
+    color:#FFC579;
+}
+/* Модификаторы */
+.categories_active{
+    color:#FFC579;
 }
