--- a/src/modules/HomePage/components/AboutSite/style.css
+++ b/src/modules/HomePage/components/AboutSite/style.css
@@ -13,3 +13,26 @@
     margin: 0 auto;
     padding:65px 0;
 }
+
+@media(max-width:1100px){
+    .aboutSite-container{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .aboutSite-container>:nth-child(1){
+        margin-right: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+@media(max-width:790px){
+    .aboutSite-container{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .aboutSite-container>.aboutSite-container-item{
+        margin-bottom: 20px;
+    }
+}
