--- a/src/modules/HomePage/components/CardMyWork/style.css
+++ b/src/modules/HomePage/components/CardMyWork/style.css
@@ -2,16 +2,38 @@
     background: rgba(54, 53, 51, 0.49);
 }
 
+@media(max-width:992px){
+    .cardWork-wrapper{
+        background: none;
+    }
+}
+
 .cardWork-container{
     display: flex;
     padding: 35px 60px;
     justify-content: space-between;
 }
 
+@media(max-width:992px){
+    .cardWork-container{
+        flex-direction: column;
+        align-items: center;
+        padding:35px 0
+    }
+}
+
 .cardWork-image-container{
     margin-right:30px;
     width:50%;
     flex-shrink: 0;
+}
+
+@media(max-width:992px){
+    .cardWork-image-container{
+        width:450px;
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
 }
 
 .cardWork-image{
@@ -24,7 +46,12 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-  
+}
+
+@media(max-width:992px){
+    .cardWork-aboutProject{
+        width:450px;
+    }
 }
 
 .cardWork-aboutProject-title{
@@ -37,6 +64,14 @@
     text-transform: uppercase;
     text-align: center;
     color: #FFFFFF;
+}
+
+@media(max-width:992px){
+    .cardWork-aboutProject-title{
+        text-align: center;
+        /* margin-left: 200px; */
+        margin-bottom: 5px;
+    }
 }
 
 .cardWork-aboutProject-name{
@@ -65,6 +100,13 @@
     align-items: center;
     margin-top: auto;
 }
+
+@media(max-width:992px){
+    .cardWork-aboutProject-bottom{
+        margin-top: 20px;
+    }
+}
+
 
 .cardWork-aboutProject-bottom-date{
     font-family: 'Montserrat-regular';
